[WW-4981] Adds support for JDK11  (#270)
* Upgrades test dependencies

* Drops unused lib

* Uses AssertJ instead of FestAssert

* Upgrades Surefire Maven Plugin to 2.22.1

* Downgrades to AssertJ 2.x to support JDK7

* decouple tests from java version

Refactor a java 9 conditional test to work always with any java version

See also WW-4845

* fix NullPointerException in NotURLClassLoader tests

Also includes a few improvements

See also WW-4845

* do not specify threadCount & forkMode which breaks tests in java 9

See also WW-4845

* pass all current tests with java 11

See also WW-4981

* fix an odd path problem in java 9

See also WW-4845

* gitignore test-output

See also WW-4981

* ask travis an oracle jdk 11 build

See also WW-4981

* ask travis to report coverage only in latest working jdk, jdk8

See also WW-4845